# OCXReader

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  OCXSchema.xsd  README.md  build.bat  cli.bat  cli.sh  cmake-format.py  test2.3docx  vcpkg-configuration.json  vcpkg.json
libs/occutils/: CMakeLists.txt
libs/occutils/cmake/: internal_utils.cmake
libs/occutils/include/occutils/: occutils-axis.h  occutils-boolean.h  occutils-compound.h  occutils-curve.h  occutils-curves.h  occutils-direction.h  occutils-edge.h  occutils-equality.h  occutils-exceptions.h  occutils-extended-step.h  occutils-face.h  occutils-fillet.h  occutils-io.hxx  occutils-line.h  occutils-list-utils.h  occutils-pipe.h  occutils-plane.h  occutils-point.h  occutils-primitive.h  occutils-print-occ.h  occutils-shape-components.h  occutils-shape.h  occutils-shapes.h  occutils-step-export.h  occutils-surface.h  occutils-wire.h
libs/occutils/src/: occutils-all.cc  occutils-axis.cc  occutils-boolean.cc  occutils-compound.cc  occutils-curve.cc  occutils-direction.cc  occutils-edge.cc  occutils-equality.cc  occutils-extended-step.cc  occutils-face.cc  occutils-fillet.cc  occutils-io.cc  occutils-line.cc  occutils-pipe.cc  occutils-plane.cc  occutils-point.cc  occutils-primitive.cc  occutils-print-occ.cc  occutils-shape-components.cc  occutils-shape.cc  occutils-step-export.cc  occutils-surface.cc  occutils-wire.cc
libs/ocx/: CMakeLists.txt
libs/ocx/include/ocx/: ocx-context.h  ocx-helper.h  ocx-reader.h
libs/ocx/include/ocx/internal/: ocx-bar-section.h  ocx-class-catalogue.h  ocx-curve.h  (+17 more)
libs/ocx/src/: ocx-all.cc  ocx-context.cc  ocx-helper.cc  ocx-log.cc  ocx-reader.cc
libs/ocx/src/context_entities/: ocx-bar-section.cc  ocx-principal-particulars-wrapper.cc  ocx-refplane-wrapper.cc  ocx-vessel-grid-wrapper.cc
libs/ocx/src/shared/: ocx-curve.cc  ocx-limited-by.cc  ocx-surface.cc
libs/ocx/src/vessel/: ocx-vessel.cc
libs/ocx/test/: CMakeLists.txt  ocx-helper-test.cc
libs/ocx/test/cmake/: internal_utils.cmake
libs/ocx/test/src/: ocx-all-test.cc  ocx-helper-test.cc
ocx/: CMakeLists.txt
ocx/cmake/: internal_utils.cmake
ocx/include/ocx/: ocx-caf-control-reader.h  ocx-context.h  ocx-helper.h  ocx-reader.h  ocx.h
ocx/include/ocx/internal/: ocx-bar-section.h  ocx-class-catalogue.h  ocx-composed-of.h  ocx-context.h  ocx-coordinate-system-reader.h  ocx-coordinate-system.h  ocx-curve-reader.h  ocx-curve.h  ocx-exceptions.h  ocx-helper.h  ocx-limited-by.h  ocx-log.h  ocx-outer-contour.h  ocx-panel-reader.h  ocx-panel.h  ocx-reference-surfaces-reader.h  ocx-reference-surfaces.h  ocx-surface-reader.h  ocx-unbounded-geometry.h  ocx-util.h  ocx-utils.h  ocx-x-section-catalogue.h
ocx/src/: ocx-all.cc  ocx-caf-control-reader.cc  ocx-context.cc  ocx-coordinate-system-reader.cc  ocx-curve-reader.cc  ocx-helper.cc  ocx-log.cc  ocx-panel-reader.cc  ocx-panel.cc  ocx-reader.cc  ocx-reference-surfaces-reader.cc  ocx-surface-reader.cc  ocx-util.cc  ocx-utils.cc
ocx/src/class_catalogue/: ocx-class-catalogue.cc
ocx/src/class_catalogue/x_section_catalogue/: ocx-bar-section.cc  ocx-x-section-catalogue.cc
ocx/src/shared/: ocx-curve.cc  ocx-limited-by.cc  ocx-outer-contour.cc  ocx-surface.cc  ocx-unbounded-geometry.cc
ocx/src/vessel/: ocx-vessel.cc
ocx/src/vessel/coordinate_system/: ocx-coordinate-system.cc
ocx/src/vessel/panel/: ocx-panel.cc
ocx/src/vessel/reference_surfaces/: ocx-reference-surfaces.cc
ocx/test/: CMakeLists.txt  ocx-all-test.cc  ocx-helper-test.cc
ocx/test/cmake/: internal_utils.cmake
ocxreader/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.example.json  config.json
ocxreader/cmake/: internal_utils.cmake
ocxreader/config/: config.example.json  log_conf.toml
ocxreader/data/: test.3docx
ocxreader/data/xsd/: GeometryTest.md  OCX_Schema.xsd  cor.csv  geometryTest_V300.3docx  holes_V300.3docx  unitsmlSchema_lite-0.9.18.xsd
ocxreader/include/ocxreader/: ocx-reader-log.h  ocxreader-cli.h  ocxreader-export.h  ocxreader-log.h
ocxreader/include/ocxreader/internal/: ocxreader-cli.h  ocxreader-export.h  ocxreader-log.h
ocxreader/src/: main.cc  ocx-reader-all.cc  ocx-reader-cli.cc  ocx-reader-export.cc  ocx-reader-log.cc  ocxreader-cli.cc  ocxreader-export.cc  ocxreader-log.cc  ocxreader.cc
shipxml/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ShipXml.xsd  cmake_install.cmake
shipxml/include/: AMCurve.h  ArcSegment.h  Bracket.h  CartesianPoint.h  CoordinateSystemReader.h  EntityWithProperties.h  Extrusion.h  GeneralData.h  KeyValue.cpp  KeyValue.h  Limit.h  NamedEntity.h  Panel.h  PanelReader.h  Properties.h  ShipSteelTransfer.h  ShipXMLDriver.h  ShipXMLHelper.h  Structure.h  Support.h  enums.h  shipxml-log.h
shipxml/include/shipxml/: shipxml-driver.h  shipxml.h
shipxml/include/shipxml/internal/: shipxml-am-curve.h  shipxml-arc-segment.h  shipxml-curve-reader.h  shipxml-entity-with-properties.h  shipxml-exceptions.h  shipxml-generel-data.h  shipxml-helper.h  shipxml-limit.h  shipxml-panel-reader.h  shipxml-panel.h  shipxml-plate-reader.h  shipxml-plate.h  shipxml-properties.h  shipxml-ship-steel-transfer.h  shipxml-structure.h  shipxml-support.h  shipxml-vector.h
shipxml/src/: AMCurve.cpp  ArcSegment.cpp  Bracket.cpp  CartesianPoint.cpp  CoordinateSystemReader.cpp  EntityWithProperties.cpp  Extrusion.cpp  GeneralData.cpp  KeyValue.cpp  Limit.cpp  NamedEntity.cpp  Panel.cpp  PanelReader.cpp  Properties.cpp  ShipSteelTransfer.cpp  ShipXMLDriver.cpp  ShipXMLHelper.cc  Structure.cpp  Support.cpp  shipxml-all.cc  shipxml-curve-reader.cc  shipxml-driver.cc  shipxml-helper.cc  shipxml-log.cc  shipxml-ship-steel-transfer.cpp
shipxml/src/reader/: shipxml-coordinate-system-reader.cpp  shipxml-panel-reader.cpp  shipxml-plate-reader.cpp
shipxml/src/xml_entities/: shipxml-am-curve.cpp  shipxml-arc-segment.cpp  shipxml-extrusion.cpp  shipxml-limit.cpp  shipxml-named-entity.cpp  shipxml-panel.cpp  shipxml-plate.cpp  shipxml-properties.cpp  shipxml-structure.cpp  shipxml-support.cpp  shipxml-vector.cpp
test/: CMakeLists.txt  OCXHelperTest.cpp
(+110 files in other folders)
